manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: naro-vorn9061-gitlab-next-ui-wrong-service
spec:
  type: NodePort
  selector:
    app: naro-vorn9061-gitlab-next-ui-wrong
  ports:
    - protocol: TCP
      port: 8292
      targetPort: 3000
